Added click to call functionality

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,16 @@
 # Twilio API credentials
 # Found at https://www.twilio.com/user/account/settings
-TWILIO_ACCOUNT_SID=[Your Account SID]
+TWILIO_ACCOUNT_SID=[Your Auth Sid]
 TWILIO_AUTH_TOKEN=[Your Auth Token]
+
+# Proxy API Key
+API_KEY=[Your API Key]
+
+# Proxy API Secret
+API_SECRET=[Your API Secret]
+
+# Proxy TwiML App SID
+PROXY_TWIML_APP_SID=[Your TwiML App SID]
 
 #PORT
 PORT=8080
