added SMS and Chat funtionality

--- a/.env.template
+++ b/.env.template
@@ -9,8 +9,11 @@ API_KEY=[Your API Key]
 # Proxy API Secret
 API_SECRET=[Your API Secret]
 
-# Proxy TwiML App SID
-PROXY_TWIML_APP_SID=[Your TwiML App SID]
+## Proxy TwiML App SID
+#PROXY_TWIML_APP_SID=[Your TwiML App SID]
+
+# Chat Service SID
+#CHAT_SERVICE_SID=[Your Chat Service SID]
 
 #PORT
 PORT=8080
